Manually handle WebGL's premultipliedAlpha:false with GpuMemoryBuffers.

Most OS compositors expect premultiplied alpha content. If the user
selects non-premultiplied rendering and WebGL is rendering into a
GpuMemoryBuffer, then make one last copy of the user's rendered
content into the GMB, premultiplying alpha at that point. This allows
the OS's compositor to handle premultipliedAlpha:false WebGL content
rather than falling back to Chrome's GL compositor.

BUG=786945

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ib43828bf9b02fcad38d210096adfc00a61804766
Reviewed-on: https://chromium-review.googlesource.com/846478
Reviewed-by: Kai Ninomiya <kainino@chromium.org>
Commit-Queue: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526885}
Former-commit-id: 3a29249f6ceb860047ea9274a6b639d41654d1b1